# Back_up_Match_Score

./: README.md  pyproject.toml  requirements.txt  vite.config.ts
backend/: .env.template  main.py  requirements.txt
backend/src/api/: deps.py
backend/src/core/: authentication.py  config.py  security.py
backend/src/crud/: constants.py  convert_db_to_response.py  match.py  player.py  prize_cut.py  request.py  team.py  tournament.py  user.py
backend/src/database/: session.py
backend/src/models/: __init__.py  enums.py  match.py  player.py  prize_cut.py  request.py  team.py  tournament.py  user.py
backend/src/schemas/: match.py  player.py  prize_cut.py  request.py  schemas.py  team.py  tournament.py  user.py
backend/src/utils/: notifications.py  pagination.py  s3.py  validators.py
backend/tests/: test_matches.py  test_players.py  test_prize_cuts.py  test_requests.py  test_teams.py  test_tournaments.py  test_users.py
frontend/: README.md  index.html  package.json  tsconfig.node.json
frontend/src/: App.vue  config.ts  main.ts
frontend/src/assets/: base.css  main.css
frontend/src/components/: AdminActions.vue  AdminRequestManagement.vue  DashboardWelcome.vue  HeaderSection.vue  LoadMoreButton.vue  MatchCard.vue  MatchFilterBar.vue  NavBar.vue  PlayerCard.vue  RequestHistory.vue  TeamCard.vue  TeamContentGrid.vue  TeamHeader.vue  TournamentCard.vue  TournamentContent.vue  TournamentFilterBar.vue  TournamentHeader.vue  UserRequestButtons.vue
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts
frontend/src/styles/: vuetify.css
frontend/src/types/: types.ts
frontend/src/views/: AboutView.vue  DashboardAdmin.vue  DashboardDirector.vue  DashboardPlayer.vue  DashboardUser.vue  HomeView.vue  LogIn.vue  MatchList.vue  Register.vue  SingleTeam.vue  SingleTournament.vue  (+2 more)
scripts/: create_db.sql  empty_data_from_db.sql  fill_data_to_db.sql
(+23 files in other folders)
