[project]
name = "match-score"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types>=0.7.0",
    "anyio>=4.6.2.post1",
    "bcrypt>=4.2.1",
    "black>=24.10.0",
    "boto3>=1.35.68",
    "botocore>=1.35.68",
    "certifi>=2024.8.30",
    "cffi>=1.17.1",
    "click>=8.1.7",
    "cryptography>=43.0.3",
    "dnspython>=2.7.0",
    "ecdsa>=0.19.0",
    "email-validator>=2.2.0",
    "fastapi>=0.115.5",
    "h11>=0.14.0",
    "httpcore>=1.0.7",
    "httpx>=0.27.2",
    "idna>=3.10",
    "itsdangerous>=2.2.0",
    "jmespath>=1.0.1",
    "mypy-extensions>=1.0.0",
    "packaging>=24.2",
    "passlib>=1.7.4",
    "pathspec>=0.12.1",
    "pillow>=11.0.0",
    "pip>=24.3.1",
    "platformdirs>=4.3.6",
    "postgres>=4.0",
    "psycopg2-binary>=2.9.10",
    "psycopg2-pool>=1.2",
    "pyasn1>=0.6.1",
    "pycparser>=2.22",
    "pydantic-core>=2.27.0",
    "pydantic-settings>=2.6.1",
    "pydantic>=2.10.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.0.1",
    "python-jose>=3.3.0",
    "python-magic>=0.4.27",
    "python-multipart>=0.0.17",
    "rsa>=4.9",
    "ruff>=0.7.4",
    "s3transfer>=0.10.4",
    "six>=1.16.0",
    "sniffio>=1.3.1",
    "sqlalchemy>=2.0.36",
    "starlette>=0.41.3",
    "typing-extensions>=4.12.2",
    "urllib3>=2.2.3",
    "uvicorn>=0.32.1",
]

[tool.ruff]
select = ["E", "F", "I", "C"]
line-length = 88
fix = true
extend-select = ["E301", "E302", "E303", "E305"]
exclude = ["migrations", ".venv", "__pycache__"]

#extend-ignore = ["C901"]

[tool.ruff.isort]
known-first-party = ["match_score"]
default-section = "THIRDPARTY"
force-sort-within-sections = true
combine-as-imports = true

[tool.black]
line-length = 88
target-version = ["py312"]
